# ti-salaries

./: .gitignore  README.md  pyproject.toml
notebooks/: exploratory_data_analysis.ipynb
