[tool.poetry]
name = "ti-salaries"
version = "0.1.0"
description = "Web application with Machine Learning to predict developer salaries, assisting employers and professionals in salary and career decisions"
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
pyarrow = "^19.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
